language/move-lang/tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.exp
error: 

   ┌── tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:3:9 ───
   │
 3 │         0 {} = 0;
   │         ^ Invalid type name. Expected: a name, a name with type arguments, or a module identifier and struct name
   │

error: 

   ┌── tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:5:12 ───
   │
 5 │         foo() = 0;
   │            ^^ Invalid fields for deconstructing assignment. Expected: named arguments
   │

error: 

   ┌── tests/move_check/expansion/invalid_unpack_assign_lhs_other_value.move:7:9 ───
   │
 7 │         foo().bar() = 0;
   │         ^^^^^^^^^ Invalid type name. Expected: a module identifier and struct name
   │

